# AT_JOINT

./: Makefile  README.md  pyproject.toml  setup.py
at_joint/: __main__.py
at_joint/core/: at_joint.py
at_joint/debug/: debugger.py  models.py  server.py
at_joint/debug/frontend/: package-lock.json  package.json
at_joint/debug/frontend/src/: App.js
at_joint/debug/frontend/src/components/: State.jsx
at_joint/debug/frontend/src/components/state/: Connection.jsx  ErrorState.jsx
at_joint/debug/frontend/src/components/state/panels/: ATSimulation.jsx  ATSolver.jsx  ATTemporalSolver.jsx
at_joint/debug/frontend/src/components/state/start_inference/: StartInference.jsx
at_joint/debug/frontend/src/utils/: PageHeader.css  PageHeader.jsx  ThemedContainer.jsx  mobileCheck.jsx
src/at_joint/: __main__.py
src/at_joint/core/: at_joint.py
