[tool.poetry]
name = "at-joint"
version = "0.1.0"
description = ""
authors = ["grigadnal625 <grigandal625@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
at-queue = {git = "https://github.com/grigandal625/AT_QUEUE.git", rev = "master"}
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
websocket = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
