[tool.poetry]
name = "at-joint"
version = "0.1.dev1"
description = ""
authors = ["grigadnal625 <grigandal625@gmail.com>"]
readme = "README.md"
exclude = ["at_joint/debug/frontend/node_modules", "at_joint/debug/frontend/node_modules/**/*"]

[tool.poetry.dependencies]
python = "^3.10"
at-queue = {git = "https://github.com/grigandal625/AT_QUEUE.git", rev = "master"}
fastapi = "^0.111.0"
websocket = "^0.2.1"
hypercorn = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
